# python-library-in-ocaml

./: .gitignore  .ocamlformat  LICENSE  README.md  TODO.md  build.sh  clean.sh  copy.sh  dune-project  python-libgen.opam  python_library_in_ocaml.opam
example/: .gitignore  README.md  pyproject.toml  setup.py
example/ocaml/: .ocamlformat  dune  mylib_ocaml.ml  ocaml_module.ml
example/src/mylib/: core.py  ocaml_module.py  ocaml_module.pyi  ocaml_module_dataclasses.py  ocaml_module_dataclasses.pyi  profile.py  test.py
ppx_python/: README.md
ppx_python/src/: ppx_python_conv.ml
ppx_python/test/: dune
ppx_python_type/runtime/: dune
ppx_python_type/src/: dune  ppx_python_type_conv.ml
ppx_python_type/test/: ppx_python_type_test.ml
src/lib/: create_module.ml  create_module.mli  driver.ml  driver.mli  dune  pydsl.ml  pydsl.mli  python_libgen.ml  register.ml  register.mli  repr.ml  repr.mli  stubs.ml  stubs.mli
src/ppx/: dune  ppx.ml  ppx.mli  repr_ast.ml  repr_ast.mli  repr_rewriter.ml  repr_rewriter.mli
src/ppx_python/: README.md
src/ppx_python/runtime/: dune
src/ppx_python/src/: dune
src/ppx_python/test/: ppx_test.ml
src/ppx_python_type/runtime/: ppx_python_type_runtime.ml
src/python_library_in_ocaml/: lib.ml
src/python_library_in_ocaml/lib/: create_module.ml  driver.ml  driver.mli  dune  python_library_in_ocaml.ml  register.ml  register.mli  repr.ml  stubs.ml  stubs.mli
src/python_library_in_ocaml/ppx/: dune  ppx.ml  ppx_python_type_conv.ml
src/python_library_in_ocaml/templates/: dune  stub.py  stub.pyi
src/python_library_in_ocaml/test/: dune  ppx_python_type_test.ml  test.ml
src/templates/: dune  stub.py  stub.pyi
src/test/: dune  test.ml
