[project]
name = "mylib"
version = "0.1.0"
description = ""
authors = [{name="Jonathan Laurent", email="jonathan.laurent@cs.cmu.edu"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.so"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"